Made the UI for the Create page

--- a/views/Create.ejs
+++ b/views/Create.ejs
@@ -10,10 +10,15 @@
         <button class="btn btn-secondary float-right" id="Save">Save</button>
 
     </div>
+    <div class="WorkArea">
+        <div class="SideBar">
 
-    <div class="SideBar">
-
+        </div>
+        <div class="Mainview">
+            
+        </div>
     </div>
+
     <script src="main.js"></script>
 </body>
 <%- include("footer") %>
