--- a/public/main.css
+++ b/public/main.css
@@ -4,8 +4,32 @@
     padding: 2%;
 }
 
+.WorkArea {
+    display: flex;
+    flex-direction: row;
+    margin:0;
+    padding: 0;
+    width: 100%;
+    height: 80vh;
+}
+
 .SideBar {
     display: flex;
     flex-direction: column;
     width: 20vw;
+    border-right: 3px;
+    overflow: auto;
+}
+.MainView {
+    display: flex;
+    flex-direction: column;
+}
+
+.MainSlides {
+    width: 80vw;
+    height: 100%;
+}
+
+.hidden {
+    display: none;
 }
